--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image"></script>
   <script>
-    const URL = "https://[ТВОЙ_GITHUB].github.io/[папка_с_моделью]/";
+    const URL = "https://[Teqich].github.io/[EcoBot]/";
     let model, webcam, labelContainer, maxPredictions;
 
     async function init() {
