--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Live Classification</h1>
-  <img id="espCam" src="http://ТВОЙ_IP_ESP32:81/stream" width="320" height="240" crossorigin="anonymous"/>
+  <img id="espCam" src="http://192.168.229.148/" width="320" height="240" crossorigin="anonymous"/>
   <div id="prediction"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
